@@ -1,334 +1,330 @@
-/*
-
-현재 커밋 버전에서 바뀐 코드들이 너무 많아 에러가 발생
-다음 진행 PR에서 변경 예정
 package com.bugzero.rarego.boundedContext.auction.app;
+
+import static org.mockito.BDDMockito.*;
+
+import java.time.LocalDateTime;
+import java.util.*;
+
+import org.junit.jupiter.api.DisplayName;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
+import org.mockito.InjectMocks;
+import org.mockito.Mock;
+import org.mockito.junit.jupiter.MockitoExtension;
+import org.springframework.test.util.ReflectionTestUtils;
 
 import com.bugzero.rarego.boundedContext.auction.domain.*;
 import com.bugzero.rarego.boundedContext.auction.in.dto.WishlistListResponseDto;
 import com.bugzero.rarego.boundedContext.auction.out.*;
 import com.bugzero.rarego.boundedContext.product.domain.Product;
 import com.bugzero.rarego.boundedContext.product.domain.ProductImage;
+import com.bugzero.rarego.boundedContext.product.domain.ProductMember;
 import com.bugzero.rarego.boundedContext.product.out.ProductImageRepository;
 import com.bugzero.rarego.boundedContext.product.out.ProductRepository;
 import com.bugzero.rarego.global.exception.CustomException;
 import com.bugzero.rarego.global.response.ErrorType;
 import com.bugzero.rarego.global.response.PagedResponseDto;
 import com.bugzero.rarego.shared.auction.dto.AuctionDetailResponseDto;
+import com.bugzero.rarego.shared.auction.dto.AuctionListResponseDto;
 import com.bugzero.rarego.shared.auction.dto.AuctionOrderResponseDto;
 import com.bugzero.rarego.shared.auction.dto.AuctionSearchCondition;
-import org.junit.jupiter.api.DisplayName;
-import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.ArgumentCaptor;
-import org.mockito.InjectMocks;
-import org.mockito.Mock;
-import org.mockito.junit.jupiter.MockitoExtension;
+import com.bugzero.rarego.shared.auction.dto.MyAuctionOrderListResponseDto;
+
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
-import org.springframework.data.jpa.domain.Specification;
-import org.springframework.test.util.ReflectionTestUtils;
-
-import java.time.LocalDateTime;
-import java.util.*;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
-import static org.mockito.BDDMockito.*;
-import static org.mockito.ArgumentMatchers.*;=
-import static org.mockito.Mockito.*;
 
 import jakarta.persistence.criteria.*;
 
 @ExtendWith(MockitoExtension.class)
 class AuctionReadUseCaseTest {
 
-    @InjectMocks
-    private AuctionReadUseCase auctionReadUseCase;
+	@InjectMocks
+	private AuctionReadUseCase auctionReadUseCase;
 
-    @Mock
-    private AuctionSupport support;
+	// [추가] 리팩토링으로 추가된 Support Mock
+	@Mock
+	private AuctionSupport support;
 
-    @Mock
-    private AuctionRepository auctionRepository;
-    @Mock
-    private BidRepository bidRepository;
-    @Mock
-    private AuctionOrderRepository auctionOrderRepository;
-    @Mock
-    private ProductRepository productRepository;
-    @Mock
-    private AuctionMemberRepository auctionMemberRepository;
-    @Mock
-    private ProductImageRepository productImageRepository;
-    @Mock
-    private AuctionBookmarkRepository auctionBookmarkRepository;
+	// [유지] Bulk 조회 등에 여전히 쓰이는 Mock들
+	@Mock
+	private AuctionRepository auctionRepository;
+	@Mock
+	private BidRepository bidRepository;
+	@Mock
+	private AuctionOrderRepository auctionOrderRepository;
+	@Mock
+	private ProductRepository productRepository;
+	@Mock
+	private AuctionMemberRepository auctionMemberRepository;
+	@Mock
+	private ProductImageRepository productImageRepository;
+  @Mock
+  private AuctionBookmarkRepository auctionBookmarkRepository;
 
-    // --- 1. 경매 상세 조회 (getAuctionDetail) 테스트 ---
+	// --- 1. 경매 상세 조회 (getAuctionDetail) 테스트 ---
 
-    @Test
-    @DisplayName("상세 조회 - 로그인 회원(publicId 전달), 입찰 기록 있음")
-    void getAuctionDetail_member_withBid() {
-        // given
-        Long auctionId = 1L;
-        String memberPublicId = "user_pub_id_1";
-        Long memberId = 10L;
+	@Test
+	@DisplayName("상세 조회 - 로그인 회원(publicId 전달), 입찰 기록 있음")
+	void getAuctionDetail_member_withBid() {
+		// given
+		Long auctionId = 1L;
+		String memberPublicId = "user_pub_id_1";
+		Long memberId = 10L;
 
-        // 1. 회원 Mock
-        AuctionMember member = AuctionMember.builder().publicId(memberPublicId).build();
-        ReflectionTestUtils.setField(member, "id", memberId);
+		// 1. 회원 Mock
+		AuctionMember member = AuctionMember.builder().publicId(memberPublicId).build();
+		ReflectionTestUtils.setField(member, "id", memberId);
 
-        // 2. 경매 Mock
-        Auction auction = Auction.builder()
-                .productId(50L)
-                .sellerId(20L)
-                .startPrice(1000)
-                .durationDays(3)
-                .endTime(LocalDateTime.now().plusDays(1))
-                .build();
-        ReflectionTestUtils.setField(auction, "id", auctionId);
-        ReflectionTestUtils.setField(auction, "currentPrice", 6000);
-        ReflectionTestUtils.setField(auction, "status", AuctionStatus.IN_PROGRESS);
+		// 2. 경매 Mock
+		Auction auction = Auction.builder()
+			.productId(50L)
+			.sellerId(100L)
+			.startPrice(1000)   // 필수
+			.durationDays(3)    // [수정] NPE 원인 해결
+			.endTime(LocalDateTime.now().plusDays(1))
+			.build();
+		ReflectionTestUtils.setField(auction, "id", auctionId);
+		ReflectionTestUtils.setField(auction, "currentPrice", 6000);
+		ReflectionTestUtils.setField(auction, "status", AuctionStatus.IN_PROGRESS);
 
-        // 3. 입찰 Mock
-        Bid highestBid = Bid.builder().bidAmount(6000).bidderId(99L).build();
-        Bid myLastBid = Bid.builder().bidAmount(5000).bidderId(memberId).build();
+		// 3. 입찰 Mock
+		Bid highestBid = Bid.builder().bidAmount(6000).bidderId(99L).build();
+		Bid myLastBid = Bid.builder().bidAmount(5000).bidderId(memberId).build();
 
-        // [변경] Repository -> Support로 Mocking 대상 변경
-        given(support.getMember(memberPublicId)).willReturn(member);
-        given(support.findAuctionById(auctionId)).willReturn(auction);
+		// [변경] Repository -> Support로 Mocking 대상 변경
+		given(support.getPublicMember(memberPublicId)).willReturn(member);
+		given(support.findAuctionById(auctionId)).willReturn(auction);
 
-        // [유지] BidRepository는 UseCase가 직접 사용함
-        given(bidRepository.findTopByAuctionIdOrderByBidAmountDesc(auctionId)).willReturn(Optional.of(highestBid));
-        given(bidRepository.findTopByAuctionIdAndBidderIdOrderByBidAmountDesc(auctionId, memberId))
-                .willReturn(Optional.of(myLastBid));
+		// [유지] BidRepository는 UseCase가 직접 사용함
+		given(bidRepository.findTopByAuctionIdOrderByBidAmountDesc(auctionId)).willReturn(Optional.of(highestBid));
+		given(bidRepository.findTopByAuctionIdAndBidderIdOrderByBidAmountDesc(auctionId, memberId))
+			.willReturn(Optional.of(myLastBid));
 
-        // when
-        AuctionDetailResponseDto result = auctionReadUseCase.getAuctionDetail(auctionId, memberPublicId);
+		// when
+		AuctionDetailResponseDto result = auctionReadUseCase.getAuctionDetail(auctionId, memberPublicId);
 
-        // then
-        assertThat(result.myParticipation().hasBid()).isTrue();
-        assertThat(result.myParticipation().myLastBidPrice()).isEqualTo(5000);
-        assertThat(result.bid().isMyHighestBid()).isFalse();
-    }
+		// then
+		assertThat(result.myParticipation().hasBid()).isTrue();
+		assertThat(result.myParticipation().myLastBidPrice()).isEqualTo(5000);
+		assertThat(result.bid().isMyHighestBid()).isFalse();
+	}
 
-    // --- 2. 낙찰 기록 상세 조회 (getAuctionOrder) 테스트 ---
+	// --- 2. 낙찰 기록 상세 조회 (getAuctionOrder) 테스트 ---
 
-    @Test
-    @DisplayName("낙찰 상세 조회 - 낙찰자(BUYER)가 조회 시 정상 반환")
-    void getAuctionOrder_asBuyer() {
-        // given
-        Long auctionId = 1L;
-        String buyerPublicId = "buyer_pub_id";
-        Long buyerId = 10L;
-        Long sellerId = 20L;
+	@Test
+	@DisplayName("낙찰 상세 조회 - 낙찰자(BUYER)가 조회 시 정상 반환")
+	void getAuctionOrder_asBuyer() {
+		// given
+		Long auctionId = 1L;
+		String buyerPublicId = "buyer_pub_id";
+		Long buyerId = 10L;
+		Long sellerId = 20L;
 
-        // 1. 회원(구매자)
-        AuctionMember buyer = AuctionMember.builder().publicId(buyerPublicId).nickname("BuyerNick").build();
-        ReflectionTestUtils.setField(buyer, "id", buyerId);
+		// 1. 회원(구매자)
+		AuctionMember buyer = AuctionMember.builder().publicId(buyerPublicId).nickname("BuyerNick").build();
+		ReflectionTestUtils.setField(buyer, "id", buyerId);
 
-        // 2. 주문 정보
-        AuctionOrder order = AuctionOrder.builder()
-                .auctionId(auctionId)
-                .bidderId(buyerId)
-                .sellerId(sellerId)
-                .finalPrice(10000)
-                .build();
-        ReflectionTestUtils.setField(order, "id", 777L);
-        ReflectionTestUtils.setField(order, "status", AuctionOrderStatus.PROCESSING);
+		// 2. 주문 정보
+		AuctionOrder order = AuctionOrder.builder()
+			.auctionId(auctionId)
+			.bidderId(buyerId)
+			.sellerId(sellerId)
+			.finalPrice(10000)
+			.build();
+		ReflectionTestUtils.setField(order, "id", 777L);
+		ReflectionTestUtils.setField(order, "status", AuctionOrderStatus.PROCESSING);
 
-        // 3. 경매 정보
-        Auction auction = Auction.builder().productId(50L).startPrice(1000).durationDays(3).build();
+		// 3. 관련 데이터 (경매) - NPE 방지
+		Auction auction = Auction.builder()
+			.productId(50L)
+			.startPrice(1000)  // [수정] 필수
+			.durationDays(3)   // [수정] NPE 원인 해결
+			.build();
+		ReflectionTestUtils.setField(auction, "id", auctionId);
 
-        ReflectionTestUtils.setField(auction, "id", auctionId);
+		ProductMember productSeller = ProductMember.builder().build();
+		ReflectionTestUtils.setField(productSeller, "id", sellerId);
 
-        // 4. 상품 정보
-        Product product = Product.builder().sellerId(sellerId).name("Test Item").build();
-        ReflectionTestUtils.setField(product, "id", 50L);
+		// 4. 상품 정보
+		Product product = Product.builder().seller(productSeller).name("Test Item").build();
+		ReflectionTestUtils.setField(product, "id", 50L);
 
-        ProductImage image = ProductImage.builder().product(product).imageUrl("thumb.jpg").build();
+		ProductImage image = ProductImage.builder().product(product).imageUrl("thumb.jpg").build();
 
-        // 5. 판매자 정보
-        AuctionMember sellerMember = AuctionMember.builder().id(sellerId).publicId("seller_pub_id").nickname("sellerNick").build();
+		// 5. 판매자 정보
+		AuctionMember sellerMember = AuctionMember.builder().id(sellerId).publicId("seller_pub_id").nickname("sellerNick").build();
 
-        // [변경] Repository -> Support Mocking
-        given(support.getMember(buyerPublicId)).willReturn(buyer);   // 1. 요청자 조회
-        given(support.getOrder(auctionId)).willReturn(order);        // 2. 주문 조회
-        given(support.findAuctionById(auctionId)).willReturn(auction);    // 3. 경매 조회
-        given(support.getProduct(50L)).willReturn(product);          // 4. 상품 조회
-        given(support.getMember(sellerId)).willReturn(sellerMember); // 5. 거래상대 조회
+		// [변경] Repository -> Support Mocking
+		given(support.getPublicMember(buyerPublicId)).willReturn(buyer);   // 1. 요청자 조회
+		given(support.getOrder(auctionId)).willReturn(order);        // 2. 주문 조회
+		given(support.findAuctionById(auctionId)).willReturn(auction);    // 3. 경매 조회
+		given(support.getProduct(50L)).willReturn(product);          // 4. 상품 조회
+		given(support.getMember(sellerId)).willReturn(sellerMember); // 5. 거래상대 조회
 
-        // [유지] ProductImage는 UseCase가 직접 조회
-        given(productImageRepository.findAllByProductId(50L)).willReturn(List.of(image));
+		// [유지] ProductImage는 UseCase가 직접 조회
+		given(productImageRepository.findAllByProductId(50L)).willReturn(List.of(image));
 
-        // when
-        AuctionOrderResponseDto result = auctionReadUseCase.getAuctionOrder(auctionId, buyerPublicId);
+		// when
+		AuctionOrderResponseDto result = auctionReadUseCase.getAuctionOrder(auctionId, buyerPublicId);
 
-        // then
-        assertThat(result.viewerRole()).isEqualTo("BUYER");
-        assertThat(result.orderId()).isEqualTo(777L);
-        assertThat(result.trader().nickname()).isEqualTo("seller_pub_id");
-    }
+		// then
+		assertThat(result.viewerRole()).isEqualTo("BUYER");
+		assertThat(result.orderId()).isEqualTo(777L);
+		assertThat(result.trader().nickname()).isEqualTo("seller_pub_id");
+	}
 
-    @Test
-    @DisplayName("낙찰 상세 조회 - 권한 없는 제3자가 조회 시 예외 발생")
-    void getAuctionOrder_forbidden() {
-        // given
-        Long auctionId = 1L;
-        String strangerPublicId = "stranger_pub_id";
-        Long strangerId = 99L;
-        Long buyerId = 10L;
-        Long sellerId = 20L;
+	@Test
+	@DisplayName("낙찰 상세 조회 - 권한 없는 제3자가 조회 시 예외 발생")
+	void getAuctionOrder_forbidden() {
+		// given
+		Long auctionId = 1L;
+		String strangerPublicId = "stranger_pub_id";
+		Long strangerId = 99L;
+		Long buyerId = 10L;
+		Long sellerId = 20L;
 
-        // 1. 제3자 회원
-        AuctionMember stranger = AuctionMember.builder().publicId(strangerPublicId).build();
-        ReflectionTestUtils.setField(stranger, "id", strangerId);
+		// 1. 제3자 회원
+		AuctionMember stranger = AuctionMember.builder().publicId(strangerPublicId).build();
+		ReflectionTestUtils.setField(stranger, "id", strangerId);
 
-        // 2. 주문
-        AuctionOrder order = AuctionOrder.builder().auctionId(auctionId).bidderId(buyerId).sellerId(sellerId).finalPrice(10000).build();
-        ReflectionTestUtils.setField(order, "id", 777L);
+		// 2. 주문
+		AuctionOrder order = AuctionOrder.builder().auctionId(auctionId).bidderId(buyerId).sellerId(sellerId).finalPrice(10000).build();
+		ReflectionTestUtils.setField(order, "id", 777L);
 
-        // 3. 경매
-        Auction auction = Auction.builder().productId(50L).startPrice(1000).durationDays(3).build();
+		// 3. 경매 정보 (NPE 방지)
+		Auction auction = Auction.builder()
+			.productId(50L)
+			.startPrice(1000) // [수정]
+			.durationDays(3)  // [수정] NPE 원인 해결
+			.build();
 
-        // [변경] Support Mocking
-        given(support.getMember(strangerPublicId)).willReturn(stranger);
-        given(support.getOrder(auctionId)).willReturn(order);
-        given(support.findAuctionById(auctionId)).willReturn(auction);
+		// [변경] Support Mocking
+		given(support.getPublicMember(strangerPublicId)).willReturn(stranger);
+		given(support.getOrder(auctionId)).willReturn(order);
+		given(support.findAuctionById(auctionId)).willReturn(auction);
 
-        // when & then
-        assertThatThrownBy(() -> auctionReadUseCase.getAuctionOrder(auctionId, strangerPublicId))
-                .isInstanceOf(CustomException.class)
-                .hasFieldOrPropertyWithValue("errorType", ErrorType.AUCTION_ORDER_ACCESS_DENIED);
-    }
+		// when & then
+		assertThatThrownBy(() -> auctionReadUseCase.getAuctionOrder(auctionId, strangerPublicId))
+			.isInstanceOf(CustomException.class)
+			.hasFieldOrPropertyWithValue("errorType", ErrorType.AUCTION_ORDER_ACCESS_DENIED);
+	}
 
-    // --- 3. 경매 목록 조회 테스트 (변경 없음, Repository 직접 사용) ---
-    @Test
-    @DisplayName("경매 목록 조회 - 썸네일 정렬 및 데이터 조립 확인")
-    void getAuctions_success() {
-        // given
-        AuctionSearchCondition condition = new AuctionSearchCondition();
-        Pageable pageable = PageRequest.of(0, 10);
+	// --- 3. 경매 목록 조회 테스트 (변경 없음, Repository 직접 사용) ---
+	@Test
+	@DisplayName("경매 목록 조회 - 썸네일 정렬(sortOrder) 및 데이터 조립 확인")
+	void getAuctions_success() {
+		// given
+		AuctionSearchCondition condition = new AuctionSearchCondition();
+		Pageable pageable = PageRequest.of(0, 10);
 
-        Long auctionId = 1L;
-        Long productId = 100L;
-        Auction auction = Auction.builder()
-                .productId(productId)
-                .startPrice(1000)
-                .durationDays(3)
-                .build();
-        ReflectionTestUtils.setField(auction, "id", auctionId);
-        ReflectionTestUtils.setField(auction, "status", AuctionStatus.IN_PROGRESS);
+		Long auctionId1 = 1L;
+		Long productId1 = 100L;
+		Auction auction1 = Auction.builder()
+			.productId(productId1).startPrice(1000).durationDays(3).build();
+		ReflectionTestUtils.setField(auction1, "id", auctionId1);
+		ReflectionTestUtils.setField(auction1, "currentPrice", 2000);
+		ReflectionTestUtils.setField(auction1, "status", AuctionStatus.IN_PROGRESS);
 
-        Page<Auction> auctionPage = new PageImpl<>(List.of(auction), pageable, 1);
-        Product product = Product.builder().name("Test Product").build();
-        ReflectionTestUtils.setField(product, "id", productId);
+		Page<Auction> auctionPage = new PageImpl<>(List.of(auction1), pageable, 1);
+		Product product1 = Product.builder().name("Test Product").build();
+		ReflectionTestUtils.setField(product1, "id", productId1);
+		List<Object[]> bidCounts = List.<Object[]>of(new Object[]{auctionId1, 5L});
 
-        List<Object[]> bidCounts = new ArrayList<>();
-        bidCounts.add(new Object[]{auctionId, 5L});
+		ProductImage img1 = ProductImage.builder().product(product1).imageUrl("url_2.jpg").sortOrder(2).build();
+		ProductImage img2 = ProductImage.builder().product(product1).imageUrl("url_0.jpg").sortOrder(0).build();
+		ProductImage img3 = ProductImage.builder().product(product1).imageUrl("url_1.jpg").sortOrder(1).build();
 
-        ProductImage img1 = ProductImage.builder().product(product).imageUrl("url_2.jpg").sortOrder(2).build();
-        ProductImage img2 = ProductImage.builder().product(product).imageUrl("url_0.jpg").sortOrder(0).build();
-        ProductImage img3 = ProductImage.builder().product(product).imageUrl("url_1.jpg").sortOrder(1).build();
+		// [수정] findAll -> findAllApproved 로 변경
+		// 조건이 없으므로 인자는 (null, null, pageable)
+		given(auctionRepository.findAllApproved(isNull(), isNull(), any(Pageable.class)))
+			.willReturn(auctionPage);
 
-        // Mocking (private 메서드 내부에서 호출되는 Repository들)
-        given(auctionRepository.findAll(any(Specification.class), any(Pageable.class))).willReturn(auctionPage);
-        given(productRepository.findAllById(Set.of(productId))).willReturn(List.of(product));
-        given(bidRepository.countByAuctionIdIn(Set.of(auctionId))).willReturn(bidCounts);
-        given(productImageRepository.findAllByProductIdIn(Set.of(productId))).willReturn(List.of(img1, img2, img3));
+		given(productRepository.findAllById(Set.of(productId1))).willReturn(List.of(product1));
+		given(bidRepository.countByAuctionIdIn(Set.of(auctionId1))).willReturn(bidCounts);
+		given(productImageRepository.findAllByProductIdIn(Set.of(productId1))).willReturn(List.of(img1, img2, img3));
 
-        // when
-        PagedResponseDto<AuctionListResponseDto> result = auctionReadUseCase.getAuctions(condition, pageable);
+		// when
+		PagedResponseDto<AuctionListResponseDto> result = auctionReadUseCase.getAuctions(condition, pageable);
 
-        // then
-        assertThat(result.data()).hasSize(1);
-        // convertToAuctionListDtos가 sortOrder가 낮은(0) img2를 잘 선택했는지 검증
-        assertThat(result.data().get(0).thumbnailUrl()).isEqualTo("url_0.jpg");
-    }
+		// then
+		assertThat(result.data()).hasSize(1);
+		AuctionListResponseDto dto = result.data().get(0);
+		assertThat(dto.thumbnailUrl()).isEqualTo("url_0.jpg");
+	}
 
-    @Test
-    @DisplayName("경매 목록 조회 - 결과가 없을 때 빈 페이지 반환")
-    void getAuctions_empty() {
-        AuctionSearchCondition condition = new AuctionSearchCondition();
-        Pageable pageable = PageRequest.of(0, 10);
-        Page<Auction> emptyPage = new PageImpl<>(Collections.emptyList(), pageable, 0);
+	@Test
+	@DisplayName("경매 목록 조회 - 결과가 없을 때 빈 페이지 반환")
+	void getAuctions_empty() {
+		AuctionSearchCondition condition = new AuctionSearchCondition();
+		Pageable pageable = PageRequest.of(0, 10);
+		Page<Auction> emptyPage = new PageImpl<>(Collections.emptyList(), pageable, 0);
 
-        given(auctionRepository.findAll(any(Specification.class), any(Pageable.class))).willReturn(emptyPage);
+		// [수정] findAll -> findAllApproved 로 변경
+		given(auctionRepository.findAllApproved(any(), any(), any(Pageable.class)))
+			.willReturn(emptyPage);
 
-        PagedResponseDto<AuctionListResponseDto> result = auctionReadUseCase.getAuctions(condition, pageable);
+		PagedResponseDto<AuctionListResponseDto> result = auctionReadUseCase.getAuctions(condition, pageable);
 
-        assertThat(result.data()).isEmpty();
-        assertThat(result.pageDto().totalItems()).isEqualTo(0);
-    }
+		assertThat(result.data()).isEmpty();
+		assertThat(result.pageDto().totalItems()).isEqualTo(0);
+	}
 
-    @Test
-    @DisplayName("경매 목록 조회 - 검색 조건(키워드+상태)이 있을 때 상품 검색 후 경매 조회 수행")
-    void getAuctions_with_search_condition() {
-        // given
-        AuctionSearchCondition condition = new AuctionSearchCondition();
-        ReflectionTestUtils.setField(condition, "keyword", "Galaxy");
-        ReflectionTestUtils.setField(condition, "status", AuctionStatus.IN_PROGRESS);
+	@Test
+	@DisplayName("경매 목록 조회 - 검색 조건(키워드+상태)이 있을 때 상품 검색 후 경매 조회 수행")
+	void getAuctions_with_search_condition() {
+		// given
+		AuctionSearchCondition condition = new AuctionSearchCondition();
+		ReflectionTestUtils.setField(condition, "keyword", "Galaxy");
+		ReflectionTestUtils.setField(condition, "status", AuctionStatus.IN_PROGRESS);
 
-        Pageable pageable = PageRequest.of(0, 10);
+		Pageable pageable = PageRequest.of(0, 10);
 
-        // [Mock Setup 1] 키워드 검색 결과
-        List<Long> matchedProductIds = List.of(50L);
-        given(productRepository.findIdsBySearchCondition(eq("Galaxy"), isNull()))
-                .willReturn(matchedProductIds);
+		// [Mock Setup 1] 키워드 검색 결과
+		List<Long> matchedProductIds = List.of(50L);
+		given(productRepository.findIdsBySearchCondition(eq("Galaxy"), isNull()))
+			.willReturn(matchedProductIds);
 
-        // [Mock Setup 2] 경매 조회 결과
-        Auction auction = Auction.builder().productId(50L).startPrice(10000).durationDays(3).build();
-        ReflectionTestUtils.setField(auction, "id", 1L);
-        ReflectionTestUtils.setField(auction, "status", AuctionStatus.IN_PROGRESS);
-        Page<Auction> auctionPage = new PageImpl<>(List.of(auction), pageable, 1);
+		// [Mock Setup 2] 경매 조회 결과
+		Auction auction = Auction.builder()
+			.productId(50L)
+			.startPrice(10000)
+			.durationDays(3)
+			.build();
+		ReflectionTestUtils.setField(auction, "id", 1L);
+		ReflectionTestUtils.setField(auction, "status", AuctionStatus.IN_PROGRESS);
+		Page<Auction> auctionPage = new PageImpl<>(List.of(auction), pageable, 1);
 
-        given(auctionRepository.findAll(any(Specification.class), any(Pageable.class)))
-                .willReturn(auctionPage);
+		// [수정] findAll -> findAllApproved 로 변경!
+		// Specification 관련 Mocking은 이제 필요 없습니다.
+		given(auctionRepository.findAllApproved(
+			eq(AuctionStatus.IN_PROGRESS),
+			eq(matchedProductIds),
+			any(Pageable.class))
+		).willReturn(auctionPage);
 
-        // [Mock Setup 3] 연관 데이터 (DTO 조립용)
-        Product product = Product.builder().name("Galaxy Lego").build();
-        ReflectionTestUtils.setField(product, "id", 50L);
-        given(productRepository.findAllById(Set.of(50L))).willReturn(List.of(product));
-        given(bidRepository.countByAuctionIdIn(Set.of(1L))).willReturn(List.<Object[]>of(new Object[]{1L, 5L}));
-        given(productImageRepository.findAllByProductIdIn(Set.of(50L))).willReturn(Collections.emptyList());
+		// [Mock Setup 3] 연관 데이터 (DTO 조립용)
+		Product product = Product.builder().name("Galaxy Lego").build();
+		ReflectionTestUtils.setField(product, "id", 50L);
+		given(productRepository.findAllById(Set.of(50L))).willReturn(List.of(product));
+		given(bidRepository.countByAuctionIdIn(Set.of(1L))).willReturn(List.<Object[]>of(new Object[]{1L, 5L}));
+		given(productImageRepository.findAllByProductIdIn(Set.of(50L))).willReturn(Collections.emptyList());
 
-        // [추가] JPA Criteria 객체 Mocking (Specification 강제 실행을 위함)
-        Root<Auction> root = mock(Root.class);
-        CriteriaQuery<?> query = mock(CriteriaQuery.class);
-        CriteriaBuilder cb = mock(CriteriaBuilder.class);
-        Path<Object> path = mock(Path.class);
+		// when
+		PagedResponseDto<AuctionListResponseDto> result = auctionReadUseCase.getAuctions(condition, pageable);
 
-        // JPA 내부 호출 시 NPE 방지용 Stubbing
-        given(root.get(anyString())).willReturn(path);
-        given(path.in(anyCollection())).willReturn(mock(Predicate.class));
+		// then
+		assertThat(result.data()).hasSize(1);
+		assertThat(result.data().get(0).productName()).isEqualTo("Galaxy Lego");
 
-        // [핵심 수정 1] equal 오버로딩 문제 해결
-        // any() -> any(Object.class)로 변경하여 (Expression, Object) 메서드가 호출되도록 강제함
-        given(cb.equal(any(), any(Object.class))).willReturn(mock(Predicate.class));
-
-        // [핵심 수정 2] and 가변인자 문제 해결 (이전 단계에서 적용함)
-        given(cb.and(any(Predicate[].class))).willReturn(mock(Predicate.class));
-
-        // when
-        PagedResponseDto<AuctionListResponseDto> result = auctionReadUseCase.getAuctions(condition, pageable);
-
-        // then
-        assertThat(result.data()).hasSize(1);
-        assertThat(result.data().get(0).productName()).isEqualTo("Galaxy Lego");
-
-        // [핵심 수정] Specification을 캡처하여 내부 로직 강제 실행
-        ArgumentCaptor<Specification<Auction>> specCaptor = ArgumentCaptor.forClass(Specification.class);
-        verify(auctionRepository).findAll(specCaptor.capture(), any(Pageable.class));
-
-        Specification<Auction> capturedSpec = specCaptor.getValue();
-
-        // 강제 실행! -> 이때 내부의 productRepository.findIdsBySearchCondition()이 호출됨
-        capturedSpec.toPredicate(root, query, cb);
-
-        verify(productRepository).findIdsBySearchCondition(eq("Galaxy"), isNull());
-    }
+		// [검증] Specification Captor 대신 findAllApproved 호출 여부 검증
+		verify(productRepository).findIdsBySearchCondition(eq("Galaxy"), isNull());
+		verify(auctionRepository).findAllApproved(eq(AuctionStatus.IN_PROGRESS), eq(matchedProductIds), any(Pageable.class));
+	}
 
     @Test
     @DisplayName("관심 경매 조회 - 북마크된 경매 정보와 상품 정보를 조립하여 반환")
@@ -359,7 +355,7 @@ class AuctionReadUseCaseTest {
         ReflectionTestUtils.setField(product, "id", 50L);
 
         // 3. Mocking
-        given(support.getMember(publicId)).willReturn(member);
+        given(support.getPublicMember(publicId)).willReturn(member);
         given(auctionBookmarkRepository.findAllByMemberId(memberId, pageable)).willReturn(bookmarkPage);
         given(auctionRepository.findAllById(List.of(100L))).willReturn(List.of(auction));
 
@@ -380,6 +376,102 @@ class AuctionReadUseCaseTest {
         verify(auctionBookmarkRepository).findAllByMemberId(memberId, pageable);
         verify(auctionRepository).findAllById(anyCollection());
     }
-}
 
-*/
+	@Test
+	@DisplayName("나의 낙찰 목록 조회 - 성공 (데이터 조립 및 정렬 확인)")
+	void getMyAuctionOrders_success() {
+		// given
+		String memberPublicId = "user_pub_id";
+		AuctionOrderStatus status = AuctionOrderStatus.PROCESSING;
+		Pageable pageable = PageRequest.of(0, 10);
+
+		// 1. Member Mock
+		AuctionMember member = AuctionMember.builder().publicId(memberPublicId).build();
+		ReflectionTestUtils.setField(member, "id", 10L);
+
+		// 2. Order Mock (낙찰 내역)
+		AuctionOrder order = AuctionOrder.builder()
+			.auctionId(1L)
+			.bidderId(10L)
+			.finalPrice(50000)
+			.build();
+		ReflectionTestUtils.setField(order, "id", 100L);
+		ReflectionTestUtils.setField(order, "status", AuctionOrderStatus.PROCESSING); // 결제 대기
+		ReflectionTestUtils.setField(order, "createdAt", LocalDateTime.now());
+
+		Page<AuctionOrder> orderPage = new PageImpl<>(List.of(order), pageable, 1);
+
+		// 3. Auction Mock
+		Auction auction = Auction.builder().productId(50L).startPrice(1000).durationDays(3).build();
+		ReflectionTestUtils.setField(auction, "id", 1L);
+
+		// 4. Product Mock
+		Product product = Product.builder().name("Lego Titanic").build();
+		ReflectionTestUtils.setField(product, "id", 50L);
+
+		// 5. Image Mock (썸네일 정렬 확인용)
+		ProductImage img1 = ProductImage.builder().product(product).imageUrl("thumb.jpg").sortOrder(0).build();
+		ProductImage img2 = ProductImage.builder().product(product).imageUrl("detail.jpg").sortOrder(1).build();
+		ReflectionTestUtils.setField(img1, "product", product);
+
+		// Mocking Behavior
+		given(support.getPublicMember(memberPublicId)).willReturn(member);
+
+		// [핵심] 레포지토리 호출
+		given(auctionOrderRepository.findAllByBidderIdAndStatus(eq(10L), eq(status), any(Pageable.class)))
+			.willReturn(orderPage);
+
+		// 연관 데이터 조회 Mocking
+		given(auctionRepository.findAllById(Set.of(1L))).willReturn(List.of(auction));
+		given(productRepository.findAllByIdIn(Set.of(50L))).willReturn(List.of(product));
+		given(productImageRepository.findAllByProductIdIn(Set.of(50L))).willReturn(List.of(img1, img2));
+
+		// when
+		PagedResponseDto<MyAuctionOrderListResponseDto> result =
+			auctionReadUseCase.getMyAuctionOrders(memberPublicId, status, pageable);
+
+		// then
+		assertThat(result.data()).hasSize(1);
+		MyAuctionOrderListResponseDto dto = result.data().get(0);
+
+		// 데이터 매핑 검증
+		assertThat(dto.orderId()).isEqualTo(100L);
+		assertThat(dto.productName()).isEqualTo("Lego Titanic"); // 상품명 확인
+		assertThat(dto.thumbnailUrl()).isEqualTo("thumb.jpg");   // 썸네일(sortOrder=0) 확인
+		assertThat(dto.finalPrice()).isEqualTo(50000);
+		assertThat(dto.statusDescription()).isEqualTo("결제 대기중"); // 한글 변환 확인
+		assertThat(dto.auctionRequired()).isTrue();
+	}
+
+	@Test
+	@DisplayName("나의 낙찰 목록 조회 - 내역이 없을 때 빈 리스트 반환 (Early Return)")
+	void getMyAuctionOrders_empty() {
+		// given
+		String memberPublicId = "user_pub_id";
+		Pageable pageable = PageRequest.of(0, 10);
+
+		AuctionMember member = AuctionMember.builder().publicId(memberPublicId).build();
+		ReflectionTestUtils.setField(member, "id", 10L);
+
+		// 빈 페이지 생성
+		Page<AuctionOrder> emptyPage = new PageImpl<>(Collections.emptyList(), pageable, 0);
+
+		given(support.getPublicMember(memberPublicId)).willReturn(member);
+
+		// status가 null인 경우로 테스트
+		given(auctionOrderRepository.findAllByBidderIdAndStatus(eq(10L), isNull(), any(Pageable.class)))
+			.willReturn(emptyPage);
+
+		// when
+		PagedResponseDto<MyAuctionOrderListResponseDto> result =
+			auctionReadUseCase.getMyAuctionOrders(memberPublicId, null, pageable);
+
+		// then
+		assertThat(result.data()).isEmpty();
+		assertThat(result.pageDto().totalItems()).isEqualTo(0);
+
+		// [중요] 최적화 검증: 목록이 비었으므로 다른 리포지토리는 호출되지 않아야 함
+		// (Mockito.verify는 선택 사항입니다)
+		// verify(auctionRepository, never()).findAllById(any());
+	}
+}
